--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^2.0.0",
+    "gulp-uglifyes": "^0.2.1",
     "hexo": "^3.8.0",
     "hexo-algolia": "^1.3.1",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
