--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
-    "gulp": "^4.0.1",
-    "gulp-clean-css": "^4.2.0",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^2.0.0",
     "gulp-uglifyes": "^0.2.1",
-    "hexo": "^3.8.0",
+    "hexo": "^3.9.0",
     "hexo-algolia": "^1.3.1",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^1.0.0",
@@ -22,10 +22,12 @@
     "hexo-generator-baidu-sitemap": "^0.1.6",
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^0.2.1",
-    "hexo-generator-searchdb": "^1.0.8",
+    "hexo-generator-searchdb": "^1.3.1",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-leancloud-counter-security": "^1.4.0",
+    "hexo-inject": "^1.0.0",
+    "hexo-leancloud-counter-security": "^1.5.0",
+    "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-pandoc": "^0.3.0",
