--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,11 @@
 
 # Site
 title: Randy's Notes
-subtitle:
+subtitle: ''
 description: 路漫漫其修远兮 吾将上下而求索
 author: Randy Peng
 language: zh-CN
+timezone: ''
 
 #=====================================
 # For hexo-generator-searchdb plugin
@@ -16,14 +17,6 @@ search:
   field: post
   format: html
   limit: 10000
-
-# For hexo-filter-emoji plugin
-# githubEmojis:
-#   enable: true
-#   className: github-emoji
-#   inject: true
-#   styles:
-#   customEmojis:
 
 # For hexo-leancloud-counter-security security plugin
 leancloud_counter_security:
@@ -40,21 +33,6 @@ algolia:
   indexName: Notes
   chunkSize: 5000
 
-# For hexo-filter-optimize plugin
-# filter_optimize:
-#   enable: true
-#   remove_query_string: true
-#   remove_comments: false
-#   css:
-#     enable: true
-#     bundle: true
-#     inlines:
-#     excludes:
-#   js:
-#     bundle: true
-#     excludes:
-#   priority: 12
-
 # For hexo-symbols-count-time plugin
 symbols_count_time:
   symbols: true
@@ -66,9 +44,11 @@ symbols_count_time:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://pengzhendong.cn
-root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
+  pretty_urls:
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -84,7 +64,10 @@ skip_render:
 new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+external_link:
+  enable: true # Open external links in new tab
+  field: site # Apply to the whole site
+  exclude: ''
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
@@ -94,7 +77,14 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: ''
+  wrap: true
+  hljs: false
+prismjs:
+  enable: false
+  preprocess: true
+  line_number: true
+  tab_replace: ''
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -110,17 +100,29 @@ default_category: uncategorized
 category_map:
 tag_map:
 
+# Metadata elements
+## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+meta_generator: true
+
 # Date / Time format
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
+## updated_option supports 'mtime', 'date', 'empty'
+updated_option: 'mtime'
 
 # Pagination
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+# Include / Exclude file(s)
+## include:/exclude: options only apply to the 'source/' folder
+include:
+exclude:
+ignore:
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
@@ -128,8 +130,10 @@ pagination_dir: page
 theme: next
 
 # Deployment
-## Docs: https://hexo.io/docs/deployment.html
+## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo:
-    github: git@github.com:pengzhendong/pengzhendong.github.io.git,master
+  repo: git@github.com:pengzhendong/pengzhendong.github.io.git
+  branch: master
+  name: pengzhendong
+  email: 275331498@qq.com
