--- a/package.json
+++ b/package.json
@@ -2,34 +2,39 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.4.0"
   },
   "dependencies": {
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-html-minifier-terser": "^6.0.1",
     "gulp-htmlclean": "^2.7.22",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^5.0.3",
-    "gulp-uglify": "^3.0.2",
-    "gulp-uglify-es": "^2.0.0",
-    "gulp-uglifyes": "^0.2.1",
-    "hexo": "^3.9.0",
-    "hexo-algolia": "^1.3.1",
-    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
-    "hexo-deployer-git": "^1.0.0",
-    "hexo-generator-archive": "^0.1.5",
-    "hexo-generator-baidu-sitemap": "^0.1.6",
-    "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.1",
-    "hexo-generator-searchdb": "^1.3.1",
-    "hexo-generator-sitemap": "^1.2.0",
-    "hexo-generator-tag": "^0.2.0",
+    "gulp-terser": "^2.1.0",
+    "hexo": "^5.0.0",
+    "hexo-algolia": "^1.3.2",
+    "hexo-deployer-git": "^3.0.0",
+    "hexo-filter-mathjax": "^0.8.0",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-searchdb": "^1.4.0",
+    "hexo-generator-sitemap": "^2.2.0",
+    "hexo-generator-tag": "^1.0.0",
     "hexo-leancloud-counter-security": "^1.5.0",
-    "hexo-renderer-ejs": "^0.3.1",
+    "hexo-pangu": "^0.2.1",
+    "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-pandoc": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.3",
-    "hexo-symbols-count-time": "^0.4.4"
+    "hexo-renderer-stylus": "^1.1.0",
+    "hexo-server": "^2.0.0",
+    "hexo-symbols-count-time": "^0.7.1"
   }
 }
